--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
         <!-- контакты -->
         <ul class="nav-header contact">
           <li class="nav-header-title">
-            <a href="mailto:info@devstudio.com" class="nav-studio contacts link">
+            <a
+              href="mailto:info@devstudio.com"
+              class="nav-studio contacts link"
+            >
               <svg class="header-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope-hover" class=""></use>
+                <use
+                  href="./images/symbol-defs.svg#icon-envelope-hover"
+                  class=""
+                ></use>
               </svg>
               <span>info@devstudio.com</span>
             </a>
@@ -53,7 +59,10 @@
           <li class="nav-header-title">
             <a href="tel:+380961111111" class="nav-studio contacts link">
               <svg class="header-icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-Vectors" class=""></use>
+                <use
+                  href="./images/symbol-defs.svg#icon-Vectors"
+                  class=""
+                ></use>
               </svg>
               <span>+38 096 111 11 11</span></a
             >
@@ -67,7 +76,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="main-text">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="buttons studio" data-modal-open>Заказать услугу</button>
+          <button type="button" class="buttons studio" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
       <!-- Особенности -->
@@ -78,25 +89,29 @@
             <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Внимание к деталям</h3>
               <p class="peculiarities-text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
               </p>
             </li>
             <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Пунктуальность</h3>
               <p class="peculiarities-text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
               </p>
             </li>
             <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Планирование</h3>
               <p class="peculiarities-text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
               </p>
             </li>
             <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Современные технологии</h3>
               <p class="peculiarities-text">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
               </p>
             </li>
           </ul>
@@ -150,7 +165,11 @@
           <h2 class="title-text">Наша команда</h2>
           <ul class="team main-nav">
             <li class="box main-nav-item">
-              <img src="./images/team1.jpeg" alt="Product Designer" width="270" />
+              <img
+                src="./images/team1.jpeg"
+                alt="Product Designer"
+                width="270"
+              />
               <div class="team-text">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p lang="en" class="team-profession">Product Designer</p>
@@ -199,7 +218,11 @@
               </div>
             </li>
             <li class="box main-nav-item">
-              <img src="./images/team2.jpeg" alt="Frontend Developer" width="270" />
+              <img
+                src="./images/team2.jpeg"
+                alt="Frontend Developer"
+                width="270"
+              />
               <div class="team-text">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p lang="en" class="team-profession">Frontend Developer</p>
@@ -356,42 +379,60 @@
             <li class="clients-icons-item link">
               <a href="" class="clients-icon">
                 <svg class="clients-icon-svg" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Logo" class="clients-icon-use"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo"
+                    class="clients-icon-use"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="clients-icons-item link">
               <a href="" class="clients-icon">
                 <svg class="clients-icon-svg" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Logo-1" class="clients-icon-use"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo-1"
+                    class="clients-icon-use"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="clients-icons-item link">
               <a href="" class="clients-icon">
                 <svg class="clients-icon-svg" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Logo-2" class="clients-icon-use"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo-2"
+                    class="clients-icon-use"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="clients-icons-item link">
               <a href="" class="clients-icon">
                 <svg class="clients-icon-svg" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Logo-3" class="clients-icon-use"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo-3"
+                    class="clients-icon-use"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="clients-icons-item link">
               <a href="" class="clients-icon">
                 <svg class="clients-icon-svg" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Logo-4" class="clients-icon-use"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo-4"
+                    class="clients-icon-use"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="clients-icons-item link">
               <a href="" class="clients-icon">
                 <svg class="clients-icon-svg" width="106" height="60">
-                  <use href="./images/symbol-defs.svg#icon-Logo-5" class="clients-icon-use"></use>
+                  <use
+                    href="./images/symbol-defs.svg#icon-Logo-5"
+                    class="clients-icon-use"
+                  ></use>
                 </svg>
               </a>
             </li>
@@ -410,13 +451,19 @@
           <address class="addresses">
             <ul>
               <li class="addresses-footer-gps">
-                <a class="contact-footer link gps"> г. Киев, пр-т Леси Украинки, 26</a>
+                <a class="contact-footer link gps">
+                  г. Киев, пр-т Леси Украинки, 26</a
+                >
               </li>
               <li class="addresses-footer-mail">
-                <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a>
+                <a href="mailto:info@example.com" class="contact-footer link"
+                  >info@example.com</a
+                >
               </li>
               <li class="addresses-footer-tel">
-                <a href="tel:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
+                <a href="tel:+380991111111" class="contact-footer link"
+                  >+38 099 111 11 11</a
+                >
               </li>
             </ul>
           </address>
@@ -474,30 +521,58 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form>
-        <button type="button" class="icon-modal" data-modal-close>
-          <svg class="modal-close" width="11" height="11">
-            <use href="./images/symbol-defs.svg#icon-close" class=""></use>
-          </svg>
-        </button>
+          <button type="button" class="icon-modal" data-modal-close>
+            <svg class="modal-close" width="11" height="11">
+              <use href="./images/symbol-defs.svg#icon-close" class=""></use>
+            </svg>
+          </button>
           <b class="text-form">Залиште свої дані, ми вам передзвонимо</b>
-          <label class="form-studio">Ім'я
+          <div class="form-icon">
+            <label class="form-studio"
+              >Ім'я
+              <input type="text" name="name" class="form-input"/>
+              <svg class="icon-modal-svg" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-name"></use>
+              </svg>
+            </label>
+          </div>
+          <div class="form-icon">
+            <label class="form-studio"
+              >Телефон
+              <input type="number" name="tel" class="form-input"/>
+              <svg class="icon-modal-svg" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-tel"></use>
+              </svg>
+            </label>
+          </div>
+          <div class="form-icon">
+            <label class="form-studio"
+              >Пошта
 
-          <input type="text" name="name">
+              <input type="email" name="email" class="form-input"/>
 
-          </label>
+              <svg class="icon-modal-svg" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
 
-          <label class="form-studio">Телефон
-          <input type="number" name="tel">
-          </label>
-          <label class="form-studio">Пошта
-          <input type="email" name="email" >
-          </label>
-          <label for="comment" >Коментар </label>
-          <textarea name="comment" id="comment" rows="10" placeholder="Введіть текст"></textarea>
-
-          <input type="checkbox" name="policy" id="policy">
-          <label for="policy" >Погоджуюся з розсилкою та приймаю <a href=""> Умови договору </a></label>
-          <button type="submit">Відправити</button>
+            </label>
+          </div>
+          <label for="comment" class="form-studio">Коментар </label>
+          <textarea
+            name="comment"
+            id="comment"
+            rows="10"
+            placeholder="Введіть текст"
+            class="form-studio-textarea "
+          ></textarea>
+          <div class="checkbox-modal">
+            <input type="checkbox" name="policy" id="policy" class="checkbox"/>
+            <label for="policy" class="checkbox-modal-text"
+              >Погоджуюся з розсилкою та приймаю
+              <a href="" class="link-checkbox"> Умови договору </a></label
+            >
+          </div>
+          <button type="submit" class="modal-btn">Відправити</button>
         </form>
       </div>
     </div>
