--- a/index.html
+++ b/index.html
@@ -519,7 +519,6 @@
           <div class="footer-box-icon">
             <p class="footer-icon-text">Підпишіться на розсилку</p>
             <form class="footer-flex">
-
               <input
                 type="email"
                 name="email"
@@ -532,8 +531,6 @@
                   <use href="./images/symbol-defs.svg#icon-icon-send"></use>
                 </svg>
               </button>
-
-
             </form>
           </div>
         </div>
@@ -594,7 +591,14 @@
                 id="policy"
                 class="checkbox"
               />
-              <span class="icon-checkbox"></span>
+              <svg
+                class="icon-checkbox icon-modal-check"
+                width="16"
+                height="15"
+              >
+                <use href="./images/symbol-defs.svg#icon-check"></use>
+              </svg>
+              <span class=""></span>
               Погоджуюся з розсилкою та приймаю
               <a href="" class="link-checkbox"> Умови договору </a></label
             >
