--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 height="294"
               />
               <div class="title-text-top">
-                <span class="title-modal-text"> Десктопные приложения </span>
+                <p class="title-modal-text"> Десктопные приложения </p>
               </div>
             </li>
             <li class="main-nav-item">
@@ -142,7 +142,7 @@
                 height="294"
               />
               <div class="title-text-top">
-                <span class="title-modal-text"> Мобильные приложения </span>
+                <p class="title-modal-text"> Мобильные приложения </p>
               </div>
             </li>
             <li class="main-nav-item">
@@ -153,7 +153,7 @@
                 height="294"
               />
               <div class="title-text-top">
-                <span class="title-modal-text"> Дизайнерские решения </span>
+                <p class="title-modal-text"> Дизайнерские решения </p>
               </div>
             </li>
           </ul>
@@ -468,7 +468,7 @@
             </ul>
           </address>
         </div>
-        <div>
+
           <div class="footer-box-icon">
             <p class="footer-icon-text">приєднуйтесь</p>
             <ul class="footer-flex">
@@ -514,67 +514,71 @@
               </li>
             </ul>
           </div>
-        </div>
-        <div>
-          <div class="footer-box-icon">
+
+
+          <div class="footer-box-icon-btn">
             <p class="footer-icon-text">Підпишіться на розсилку</p>
             <form class="footer-flex">
+              <label for="email"></label>
               <input
                 type="email"
                 name="email"
                 placeholder="E-mail"
                 class="footer-input"
+                id="email"
               />
+
               <button type="submit" class="modal-btn-footer">
                 Підписатися
                 <svg class="icon-modal-svg-footer" width="24" height="24">
                   <use href="./images/symbol-defs.svg#icon-icon-send"></use>
                 </svg>
               </button>
+
             </form>
           </div>
-        </div>
+
       </div>
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <button type="button" class="icon-modal" data-modal-close>
+          <svg class="modal-close" width="11" height="11">
+          <use href="./images/symbol-defs.svg#icon-close" class=""></use>
+        </svg></button>
+        <p class="text-form">Залиште свої дані, ми вам передзвонимо</p>
         <form>
-          <button type="button" class="icon-modal" data-modal-close>
-            <svg class="modal-close" width="11" height="11">
-              <use href="./images/symbol-defs.svg#icon-close" class=""></use>
-            </svg>
-          </button>
-          <b class="text-form">Залиште свої дані, ми вам передзвонимо</b>
-          <div class="form-icon">
-            <label class="form-studio"
-              >Ім'я
-              <input type="text" name="name" class="form-input" />
-              <svg class="icon-modal-svg" width="18" height="18">
+
+          <div class="form-studio">
+            <label class="form-studio-label" for="name">Ім'я</label>
+              <input type="text" name="name" class="form-input" id="name"/>
+              <svg class="icon-modal-svg" width="12" height="12">
                 <use href="./images/symbol-defs.svg#icon-name"></use>
               </svg>
-            </label>
           </div>
-          <div class="form-icon">
-            <label class="form-studio"
-              >Телефон
-              <input type="number" name="tel" class="form-input" />
-              <svg class="icon-modal-svg" width="18" height="18">
+
+          <div class="form-studio">
+            <label class="form-studio-label" for="tel"
+              >Телефон </label>
+              <input type="number" name="tel" class="form-input" id="tel"/>
+              <svg class="icon-modal-svg" width="12" height="12">
                 <use href="./images/symbol-defs.svg#icon-tel"></use>
               </svg>
-            </label>
+
           </div>
-          <div class="form-icon">
-            <label class="form-studio"
-              >Пошта
 
-              <input type="email" name="email" class="form-input" />
+          <div class="form-studio">
+            <label class="form-studio-label" for="email_studio"
+              >Пошта</label>
 
-              <svg class="icon-modal-svg" width="18" height="18">
+              <input type="email" name="email" class="form-input" id="email_studio"/>
+              <svg class="icon-modal-svg" width="12" height="12">
                 <use href="./images/symbol-defs.svg#icon-email"></use>
               </svg>
-            </label>
+
           </div>
+
           <label for="comment" class="form-studio">Коментар </label>
           <textarea
             name="comment"
@@ -598,14 +602,16 @@
               >
                 <use href="./images/symbol-defs.svg#icon-check"></use>
               </svg>
-              <span class=""></span>
+              <span class="icon-checkbox-text">
               Погоджуюся з розсилкою та приймаю
-              <a href="" class="link-checkbox"> Умови договору </a></label
+              <a href="" class="link-checkbox"> Умови договору </a>
+            </span>
+            </label
             >
           </div>
-          <div class="form">
+
             <button type="submit" class="modal-btn">Відправити</button>
-          </div>
+
         </form>
       </div>
     </div>
