--- a/portfolio.html
+++ b/portfolio.html
@@ -241,71 +241,100 @@
       <div class="container footer-box-flex">
         <div>
           <a href="#" lang="en" class="logo link"
-            >Web
+          >Web
             <span class="studio-logo-footer">Studio</span>
           </a>
 
           <address class="addresses">
             <ul>
               <li class="addresses-footer-gps">
-                <a class="contact-footer link gps"> г. Киев, пр-т Леси Украинки, 26</a>
+                <a class="contact-footer link gps">
+                  г. Киев, пр-т Леси Украинки, 26</a
+                >
               </li>
               <li class="addresses-footer-mail">
-                <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a>
+                <a href="mailto:info@example.com" class="contact-footer link"
+                >info@example.com</a
+                >
               </li>
               <li class="addresses-footer-tel">
-                <a href="tel:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
+                <a href="tel:+380991111111" class="contact-footer link"
+                >+38 099 111 11 11</a
+                >
               </li>
             </ul>
           </address>
         </div>
-        <div>
-          <div class="footer-box-icon">
-            <p class="footer-icon-text">приєднуйтесь</p>
-            <ul class="footer-flex">
-              <li class="footer-icon-item link">
-                <a href="" class="footer-icon">
-                  <svg class="footer-icon-svg" width="20" height="16.25">
-                    <use
-                      href="./images/symbol-defs.svg#icon-instagram-2"
-                      class="footer-icon-use"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-icon-item link">
-                <a href="" class="footer-icon">
-                  <svg class="footer-icon-svg" width="20" height="16.25">
-                    <use
-                      href="./images/symbol-defs.svg#icon-twitter-1"
-                      class="footer-icon-use"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-icon-item link">
-                <a href="" class="footer-icon">
-                  <svg class="footer-icon-svg" width="20" height="16.25">
-                    <use
-                      href="./images/symbol-defs.svg#icon-facebook-1"
-                      class="footer-icon-use"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-icon-item link">
-                <a href="" class="footer-icon">
-                  <svg class="footer-icon-svg" width="20" height="16.25">
-                    <use
-                      href="./images/symbol-defs.svg#icon-linkedin-1"
-                      class="footer-icon-use"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+
+        <div class="footer-box-icon">
+          <p class="footer-icon-text">приєднуйтесь</p>
+          <ul class="footer-flex">
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                          class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                          class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                          class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                          class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
+
+
+        <div class="footer-box-icon-btn">
+          <p class="footer-icon-text">Підпишіться на розсилку</p>
+          <form class="footer-flex">
+            <label for="email"></label>
+            <input
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="footer-input"
+                    id="email"
+            />
+
+            <button type="submit" class="modal-btn-footer">
+              Підписатися
+              <svg class="icon-modal-svg-footer" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+
+          </form>
+        </div>
+
       </div>
     </footer>
   </body>
