--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--шапка -->
     <header class="header">
       <div class="container main-nav">
-        <nav class="main-nav">
+        <nav class="header__nav">
           <a href="#" lang="en" class="logo link logo-header"
             >Web<span class="studio-logo-header">Studio</span></a
           >
